--- a/VirtualTourist/Base.lproj/Main.storyboard
+++ b/VirtualTourist/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="qUE-Ln-kiH">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="qUE-Ln-kiH">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -62,11 +62,94 @@
                     <navigationItem key="navigationItem" title="Travel Locations" id="aa3-Xt-SwJ"/>
                     <connections>
                         <outlet property="mapView" destination="CI7-jJ-Ik6" id="0E6-q1-IlH"/>
+                        <segue destination="F37-9p-lqa" kind="show" identifier="ShowAlbumSegue" id="W6C-fn-jMI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="467" y="361"/>
+        </scene>
+        <!--Album View Controller-->
+        <scene sceneID="dlQ-uR-r3K">
+            <objects>
+                <viewController id="F37-9p-lqa" customClass="AlbumViewController" customModule="VirtualTourist" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="mHD-o8-VM7"/>
+                        <viewControllerLayoutGuide type="bottom" id="et0-i9-HH4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ppy-dy-279">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="infinite" placeholderIntrinsicHeight="150" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="g2g-AC-SmC">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="150"/>
+                            </mapView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="hgr-ch-Ilp">
+                                <rect key="frame" x="0.0" y="150" width="600" height="450"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="EHN-fG-m6K">
+                                    <size key="itemSize" width="95" height="90"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AlbumCellIdentifier" id="dQA-Km-Nrt" customClass="AlbumCellView" customModule="VirtualTourist" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="95" height="90"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nzo-tg-4vj">
+                                                    <rect key="frame" x="0.0" y="0.0" width="95" height="90"/>
+                                                </imageView>
+                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="t2p-km-rcF">
+                                                    <rect key="frame" x="37" y="35" width="20" height="20"/>
+                                                </activityIndicatorView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="nzo-tg-4vj" secondAttribute="trailing" id="KLz-Yu-aPU"/>
+                                            <constraint firstAttribute="bottom" secondItem="nzo-tg-4vj" secondAttribute="bottom" id="feh-gJ-Gec"/>
+                                            <constraint firstItem="nzo-tg-4vj" firstAttribute="leading" secondItem="dQA-Km-Nrt" secondAttribute="leading" id="imh-oq-Hxk"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="nzo-tg-4vj" secondAttribute="trailing" constant="8" id="l75-EC-gik"/>
+                                            <constraint firstItem="nzo-tg-4vj" firstAttribute="top" secondItem="dQA-Km-Nrt" secondAttribute="top" id="mNS-pj-6yN"/>
+                                            <constraint firstItem="nzo-tg-4vj" firstAttribute="leading" secondItem="dQA-Km-Nrt" secondAttribute="leadingMargin" constant="8" id="mck-rW-TQF"/>
+                                        </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="l75-EC-gik"/>
+                                                <exclude reference="mck-rW-TQF"/>
+                                            </mask>
+                                        </variation>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="g2g-AC-SmC" firstAttribute="top" secondItem="ppy-dy-279" secondAttribute="top" id="8Df-f5-wby"/>
+                            <constraint firstItem="hgr-ch-Ilp" firstAttribute="leading" secondItem="ppy-dy-279" secondAttribute="leadingMargin" constant="174" id="9Sg-M3-ftV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="hgr-ch-Ilp" secondAttribute="trailing" constant="-16" id="DRU-g1-NM5"/>
+                            <constraint firstItem="g2g-AC-SmC" firstAttribute="leading" secondItem="ppy-dy-279" secondAttribute="leadingMargin" constant="-16" id="E6E-I9-ZaL"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="g2g-AC-SmC" secondAttribute="trailing" constant="-16" id="K0x-aE-4eE"/>
+                            <constraint firstAttribute="bottom" secondItem="hgr-ch-Ilp" secondAttribute="bottom" id="QAs-E3-lVh"/>
+                            <constraint firstItem="hgr-ch-Ilp" firstAttribute="top" secondItem="g2g-AC-SmC" secondAttribute="bottom" id="SA8-28-dwX"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="hgr-ch-Ilp" secondAttribute="trailing" constant="94" id="mp4-K1-zMv"/>
+                            <constraint firstItem="hgr-ch-Ilp" firstAttribute="leading" secondItem="ppy-dy-279" secondAttribute="leadingMargin" constant="-16" id="x2J-mh-3f7"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="9Sg-M3-ftV"/>
+                                <exclude reference="mp4-K1-zMv"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e3c-5d-mZO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1225" y="361"/>
         </scene>
     </scenes>
 </document>
