--- a/VirtualTourist/Base.lproj/Main.storyboard
+++ b/VirtualTourist/Base.lproj/Main.storyboard
@@ -97,7 +97,11 @@
                                 <rect key="frame" x="0.0" y="556" width="600" height="44"/>
                                 <items>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="cbd-eq-czr"/>
-                                    <barButtonItem title="New Collection" id="T3b-Ev-rpe"/>
+                                    <barButtonItem title="New Collection" id="T3b-Ev-rpe">
+                                        <connections>
+                                            <action selector="newCollectionAction:" destination="F37-9p-lqa" id="DUH-7C-Q8Y"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="2Un-jF-Scf"/>
                                 </items>
                             </toolbar>
@@ -174,6 +178,7 @@
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="hgr-ch-Ilp" id="jm0-yr-weJ"/>
+                        <outlet property="newCollectionButton" destination="T3b-Ev-rpe" id="HBT-RE-Hhy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e3c-5d-mZO" userLabel="First Responder" sceneMemberID="firstResponder"/>
